kindsetup/01-init.yaml
apiVersion: v1

kind: Namespace

metadata:

  name: mlops
