kindsetup/07-airflow-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      containers:
      - name: scheduler
        image: nimish1106/sh-mlops-airflow-scheduler:v1
        command: ["/bin/bash", "-c"]
        args: ["airflow db migrate || true && airflow scheduler"]
