kindsetup/11-monitoring.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring
  namespace: mlops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: monitoring

  template:
    metadata:
      labels:
        app: monitoring

    spec:
      containers:
      - name: monitoring

        image: nimish1106/sh-mlops-monitoring:v2
        imagePullPolicy: Always

        command:
        - python

        args:
        - -m
        - src.orchestration.scheduler

        volumeMounts:
        - name: monitoring-volume
          mountPath: /app/monitoring

        - name: mlflow-volume
          mountPath: /mlflow

        - name: data-volume
          mountPath: /app/data

        - name: reference-volume
          mountPath: /app/monitoring/reference

      volumes:
      - name: monitoring-volume
        hostPath:
          path: /home/ubuntu/self-healing-mlops/monitoring
          type: DirectoryOrCreate

      - name: mlflow-volume
        hostPath:
          path: /home/ubuntu/self-healing-mlops/mlflow
          type: DirectoryOrCreate

      - name: data-volume
        hostPath:
          path: /home/ubuntu/self-healing-mlops/data
          type: DirectoryOrCreate

      - name: reference-volume
        hostPath:
          path: /home/ubuntu/self-healing-mlops/monitoring/reference
          type: DirectoryOrCreate
