kindsetup/06-airflow-webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - name: webserver
        image: nimish1106/sh-mlops-airflow-web:v1
        ports:
        - containerPort: 8080
        command: ["/bin/bash", "-c"]
        args:
          - |
            airflow db migrate &&
            airflow users create --username "${AIRFLOW_ADMIN_USERNAME:-admin}" --password "${AIRFLOW_ADMIN_PASSWORD:-admin}" --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
            airflow webserver
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-service
  namespace: mlops
spec:
  selector:
    app: airflow-webserver
  ports:
    - port: 8080
      targetPort: 8080
