kindsetup/09-airflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: mlops

spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow

  template:
    metadata:
      labels:
        app: airflow

    spec:
      containers:
      - name: airflow-webserver
        image: nimish1106/sh-mlops-airflow-web:v1

        command: ["/bin/bash", "-c"]

        args:
          - >
            airflow db migrate &&
            airflow users create
            --username "${AIRFLOW_ADMIN_USERNAME:-admin}"
            --password "${AIRFLOW_ADMIN_PASSWORD:-admin}"
            --firstname admin
            --lastname admin
            --role Admin
            --email admin@mlops.com || true &&
            airflow webserver

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
  namespace: mlops

spec:
  selector:
    app: airflow

  ports:
    - port: 8080
      targetPort: 8080
