kindsetup/12-pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: mlops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pgadmin

  template:
    metadata:
      labels:
        app: pgadmin

    spec:
      containers:
      - name: pgadmin

        image: dpage/pgadmin4:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: mlops

spec:
  type: NodePort

  selector:
    app: pgadmin

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
