kindsetup/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
  namespace: mlops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      # Root API
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-service
            port:
              number: 8000

      # Airflow
      - path: /airflow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: airflow-webserver-service
            port:
              number: 8080

      # MLflow
      - path: /mlflow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
